# lerobot

./: CMakeLists.txt  complie.sh
base/: base.cpp  feetech.cpp  feetech.hpp  learner.cpp  learner.hpp  recorder.cpp  recorder.hpp  serial.cpp  serial.hpp
qml/: Main.qml  main.cpp  robot_backend.cpp  robot_backend.hpp
